@@ -6,7 +6,7 @@ import java.util.List;
 
 /**
  * Java堆内存溢出测试
- * VM Args: -Xms20m -Xmx20m -XX:+HeapDumpOnOutOfMemoryError
+ * VM Args: -Xms20m -Xmx20m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails
  */
 public class HeapOOM {
 
